cleanup js intro

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </p>
     <ul id="top-menu-bar">
         <li><a href="#">Home</a>
-        <li><a href="#" onclick="clickOnSkills()">Skills</a>
-        <li><a href="#" onclick="clickOnLanguages()">Languages</a>
+        <li><a href="#">Skills</a>
+        <li><a href="#">Languages</a>
         <li><a href="#">Contact</a>
     </ul>
     <ul>
