--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <strong><i>Analist Achizitii</i></strong>
     </p>
     <ul id="top-menu-bar">
-        <li><a href="#">Home</a>
-        <li><a href="#">Skills</a>
-        <li><a href="#">Languages</a>
-        <li><a href="#">Contact</a>
+        <li><a href="#" data-page="home-page">Home</a>
+        <li><a href="#" data-page="skills-page">Skills</a>
+        <li><a href="#" data-page="languages-page">Languages</a>
+        <li><a href="#" data-page="contact-page">Contact</a>
     </ul>
     <ul>
 
